Fix Integ, Events

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -80,9 +80,9 @@ For a historical note, the first VSP to support ticket splitting was [decredbras
 
 Three more wallets integrated Decred in September:
 
-* [Atomic](https://atomicwallet.io/) desktop [added](https://twitter.com/atomicwallet/status/1042032573168476160) Decred in version 0.1.31. The team [answered](https://www.reddit.com/r/decred/comments/9igvgg/warm_welcome_decred_in_atomic_swap_wallet/e6lki2j/) many questions on Reddit. 
+* [Atomic](https://atomicwallet.io/) desktop wallet [added](https://twitter.com/atomicwallet/status/1042032573168476160) Decred in version 0.1.31. The team [answered](https://www.reddit.com/r/decred/comments/9igvgg/warm_welcome_decred_in_atomic_swap_wallet/e6lki2j/) many questions on Reddit. 
 * [AnyBit](https://www.anybit.io/) wallet [added](https://twitter.com/decredproject/status/1043228642992640000) Decred. It features built-in price and news tracking. Notably, the source code is open for their [Android](https://github.com/AnyBitIO/anybit-Android) and [iOS](https://github.com/AnyBitIO/anybit-iOS) wallets.
-* [Cobo](https://cobo.com/) wallet [added](https://twitter.com/decredproject/status/1045765231157399554) Decred support into their Android and iOS wallets.
+* [Cobo](https://cobo.com/) [added](https://twitter.com/decredproject/status/1045765231157399554) Decred support into their Android and iOS wallets.
 
 ChangeNow [announced](https://www.reddit.com/r/decred/comments/9f7nga/decred_is_now_available_on_changenows_android_app/) Decred addition to their Android app that allows accountless swaps between 150+ assets.
 
@@ -111,7 +111,7 @@ Attended:
 * @joshuam made a Decred Jacket appearance at Singapore Grand Prix. ([photos](https://twitter.com/joshuam_/status/1041601668708622336))
 * [NewTech PDX](https://www.meetup.com/NewTechPDX/events/252679869/) meetup in Portland, USA. Raedah Group presented Decred and reported "lots of new converts". ([photos](https://twitter.com/raedahgroup/status/1042190448092164096))
 * [North Shore Bitcoin & Blockchain](https://www.meetup.com/North-Shore-Bitcoin-Blockchain/events/cgxxzpyxpbcc/) in Glenview, USA. @dustorf gave a five minute overview of Decred and [noted](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$1538066653383838ePpbA:matrix.org): "There were only about 25 people, but about 1/3 of them were aware of Decred prior. (...) Our simple presence and explanation of the project moved opinion from 'another shitcoin they sold after mining' to 'an interesting and viable project worthy of further investigation'.". (photos: [1](https://twitter.com/cenaclecapital/status/1045288205279535104) [2](https://twitter.com/cenaclecapital/status/1045288244861177857))
-* [Ethfinex Governance Summit](https://summit.ethfinex.com/) in Lugano, Switzerland. @Haon attended the event and posted his notes [here](https://twitter.com/NoahPierau/status/1046340673220349953) and [here](https://twitter.com/NoahPierau/status/1046302565447675904). ([video](https://www.youtube.com/channel/UCpPppKXkbJIfSkPKJ5cC_XQ))
+* [Ethfinex Governance Summit](https://summit.ethfinex.com/) in Lugano, Switzerland. @Haon attended the event and posted a report on [r/decred](https://www.reddit.com/r/decred/comments/9led7w/summary_of_the_ethfinex_governance_summit/), in addition [this](https://twitter.com/NoahPierau/status/1046340673220349953) and [this](https://twitter.com/NoahPierau/status/1046302565447675904) Twitter threads. ([video](https://www.youtube.com/channel/UCpPppKXkbJIfSkPKJ5cC_XQ))
 
 Upcoming:
 
