--- a/journal/201809.md
+++ b/journal/201809.md
@@ -144,16 +144,16 @@ Videos:
 * Decred, the crypto that wants to compete with Bitcoin (French, [youtube](https://www.youtube.com/watch?v=vjI0e-9Mm3g))
 * Exodus.io Live with Marco from Decred! ([youtube](https://www.youtube.com/watch?v=WDEitjPTPoU))
 
-  Marco joins Exodus.io to discuss what makes DCR an asset that will stand the test of time!
+  Marco joins Exodus.io to discuss what makes DCR an asset that will stand the test of time.
 * Building Decred With Systems Development Lead Marco Peereboom - Governance, Politeia, Lightning ([youtube](https://www.youtube.com/watch?v=nHvy-2R0Asw))
 
-  Topics: early days, Politeia, the structure of Decred, dcrtime, Lightning Network, attracting users and developers, future plans (DEX, Schnorr signatures, privacy, DAEs)
+  Topics: early days, Politeia, the structure of Decred, dcrtime, Lightning Network, attracting users and developers, future plans (DEX, Schnorr signatures, privacy, DAEs).
 
 Featured articles:
 
 * Decentralized autonomous funding of blockchain projects by @Richard-Red ([medium](https://medium.com/@richardred/decentralized-autonomous-funding-of-blockchain-projects-3c0c233ae4ad), discussion on [r/decred](https://www.reddit.com/r/decred/comments/9cyw0p/decentralized_autonomous_funding_of_blockchain/) and [r/dashpay](https://www.reddit.com/r/dashpay/comments/9cywcs/decentralized_autonomous_funding_of_blockchain/))
-* How to obtain Decred? by @mm ([stakey.club](https://stakey.club/en/how-to-obtain-decred/), [in Portuguese](https://stakey.club/pt/como-obter-decred/))
-* Digital certificates for RPC connections by @mm ([stakey.club](https://stakey.club/en/digital-certificates-for-rpc-connections/), [in Portuguese](https://stakey.club/pt/certificados-digitais-de-conexoes-rpc/))
+* How to obtain Decred? by @mm ([stakey.club](https://stakey.club/en/how-to-obtain-decred/), also [in Portuguese](https://stakey.club/pt/como-obter-decred/))
+* Digital certificates for RPC connections by @mm ([stakey.club](https://stakey.club/en/digital-certificates-for-rpc-connections/), also [in Portuguese](https://stakey.club/pt/certificados-digitais-de-conexoes-rpc/))
 * An overview of the Politeia system architecture by @fernandoabolafio ([medium](https://medium.com/decred/an-overview-of-decreds-politeia-system-architecture-8741c13b35d8))
 * One of Investors' Favorite Governance Blockchains Is Handing Over $20 Million by Brady Dale ([coindesk.com](https://www.coindesk.com/one-of-investors-favorite-governance-blockchains-is-handing-over-20-million/), discussion on [r/decred](https://www.reddit.com/r/decred/comments/9hfjwg/one_of_investors_favorite_governance_blockchains/))
 
@@ -191,7 +191,7 @@ Comm systems news: Several work channels were migrated to Matrix, #writers_room 
 
 Highlights:
 
-* Blockchains are not companies by Dean Eigenmann ([medium](https://medium.com/@decanus/blockchains-are-not-companies-9f8ed7c13018)) discussed in [#governance](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$15360994197133cjLXA:decred.org)
+* [Blockchains are not companies](https://medium.com/@decanus/blockchains-are-not-companies-9f8ed7c13018) by Dean Eigenmann discussed in [#governance](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$15360994197133cjLXA:decred.org)
 * How the DEX could benefit Decred:
 
   > The trouble with infrastructure, "thin" protocols in particular, is that someone has to build them at a cost. e.g. LN takes a ton of work, doesn't necessarily generate value itself, but it magnifies the value of BTC or whatever coin that uses it. I see the DEX in a similar light - whoever creates it is not going to make a bunch of money from it, but it will magnify the value of the underlying asset(s) that end up having a deep order book on the DEX. (@jy-p in [#dex](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15369779137110eyQvt:decred.org))
