--- a/journal/201809.md
+++ b/journal/201809.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – September 2018
+# Decred Journal – September 2018
 
 ![@morphymore at Binzantin Cafe in Taipei](../img/morphy-taipei-300.jpg "@morphymore at Binzantin Cafe in Taipei")
 
