--- a/journal/201809.md
+++ b/journal/201809.md
@@ -234,7 +234,7 @@ A critical [vulnerability](https://bitcoinmagazine.com/articles/good-bad-and-ugl
 
 ## About This Issue
 
-This is the 6th issue of Decred Journal. It is mirrored on [GitHub]({}) and [Reddit]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the 6th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201809) and [Reddit]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
