--- a/journal/201809.md
+++ b/journal/201809.md
@@ -234,7 +234,7 @@ A critical [vulnerability](https://bitcoinmagazine.com/articles/good-bad-and-ugl
 
 ## About This Issue
 
-This is the 6th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201809) and [Reddit](https://www.reddit.com/r/decred/comments/9m0f15/decred_journal_september_2018/). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the 6th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201809), [Medium](https://medium.com/decred/decred-journal-september-2018-ca667d776b60) and [Reddit](https://www.reddit.com/r/decred/comments/9m0f15/decred_journal_september_2018/). Past issues are available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
