--- a/journal/201810.md
+++ b/journal/201810.md
@@ -83,6 +83,13 @@ Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {
 
 ## Governance
 
+We had a total of {4} proposals in Politeia this month. All of them are in the pre-voting stage.
+
+1. @Richard-Red put forth a proposal on October 16, 2018 titled ["Decred Open Source Research"](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) it aims to seek funding for opensource research onto cryptocurrency and will involve multiple contributors. He is currently requesting for 10000 USD as an initial budget for a few months.
+
+2. {WRITE ABOUT "Change language: PoS Mining to PoS Voting, Stakepool to Voting Service Provider"}
+3. {WRITE ABOUT "Decred Contractor Clearance Process"}
+4. {WRITE ABOUT "Wachsman Communications Proposal for Decred"}
 {recaps Politeia activity for the month: new proposals, version changes, vote state changes, comment overview (sentiment), vote results, likely upcoming proposals}
 
 {follow up on larger proposals, completed milestones, payments}
