--- a/journal/201810.md
+++ b/journal/201810.md
@@ -56,18 +56,28 @@ Up next is polishing and scaling Politeia, as well as developing a smart contrac
 
 https://github.com/decred/dcrdata/pull/718
 
-disapproved blocks page in dev https://github.com/decred/dcrdata/pull/733
+lots of work to speed up initial sync, this would boost developer productivity
+
+* https://github.com/decred/dcrdata/pull/751
+* https://github.com/decred/dcrdata/pull/754
+* https://github.com/decred/dcrdata/issues/752
+
+Disapproved Blocks page in dev https://github.com/decred/dcrdata/pull/733
 insight api docs https://github.com/decred/dcrdata/pull/719
 
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
+[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): 0.6.2 release https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.6.2
 
 [docs](https://github.com/decred/dcrdocs):
 
 Upgraded to new mkdocs and material theme https://github.com/decred/dcrdocs/pull/601, this allowed to simplify things.
 
-[decred.org](https://github.com/decred/dcrweb): {}
+[decred.org](https://github.com/decred/dcrweb):
+
+* removed outdated compare page https://github.com/decred/dcrweb/issues/370
 
 {whats up with electrumx? https://twitter.com/marco_peereboom/status/1047922199745769473}
+
+Design: EETER updated Decred logo https://medium.com/decred/dcr-logo-performance-update-f12f94a7a33e
 
 Did you know there are several Decred packages in AUR? https://aur.archlinux.org/packages/?O=0&K=decred
 
@@ -78,6 +88,12 @@ Welcome to new people contributing for the first time:
 * gh ademuanthony {https://github.com/decred/dcrdata/commits?author=ademuanthony}
 * gh itswisdomagain {CONFRIM https://github.com/decred/dcrdata/commits?author=itswisdomagain}
 * gh ggoranov {CONFIRM https://github.com/decred/dcrd/commits?author=ggoranov}
+* gh gallexis https://github.com/decred/dcrwallet/commits?author=gallexis
+* @ZeroASIC https://github.com/decred/dcrweb/commits?author=ZeroASIC
+
+(_ed: please note the list is incomplete as it is pretty hard to track this across multiple repositories, let us know if you can help_)
+
+There was a small interruption in the work of GitHub that had a minor impact on the development.
 
 Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
@@ -91,6 +107,8 @@ We had a total of {4} proposals in Politeia this month. All of them are in the p
 3. {WRITE ABOUT "Decred Contractor Clearance Process"}
 4. {WRITE ABOUT "Wachsman Communications Proposal for Decred"}
 {recaps Politeia activity for the month: new proposals, version changes, vote state changes, comment overview (sentiment), vote results, likely upcoming proposals}
+
+https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/
 
 {follow up on larger proposals, completed milestones, payments}
 
@@ -108,6 +126,10 @@ Nodes: {node counts, version distribution}
 
 ## ASICs
 
+{Obelisk updates}
+
+http://support.obelisk.tech/article/utx5ropgxt-compensation-policy
+
 https://www.asicminervalue.com/miners/strongu/stu-u1
 https://coinminingcentral.com/products/strongu-stu-u1-11th-s
 
@@ -119,16 +141,30 @@ i2Rav: If anyone is interested in purchasing whatsminer DCR1 machines please rea
 
 {new mining and staking pools or news from existing ones}
 
-https://stakey.com 18th pool https://github.com/decred/dcrwebapi/pull/38
+Welcome _three_ new stake pools this month:
+
+* [stakey.com](https://stakey.com) 18th pool https://github.com/decred/dcrwebapi/pull/38, 1% fee (do not confuse with [stakey.net](https://stakey.net/)).
+* [dcrpos.megapool.info](dcrpos.megapool.info) 19th, 1% fee
+* [dcrstake.coinmine.pl](https://dcrstake.coinmine.pl/) 20th stake pool, 0.5% fee.
 
 https://decredvoting.com now supports automatic email notification for full and split tickets. Users have the option of receiving email notification when their ticket votes.
 https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/
+
+https://www.reddit.com/r/decred/comments/9qv235/voting_service_provider_decredvotingcom_is_now/
+
+dcr.farm recently voted on its 10,000th ticket. To celebrate, they added a 6th voting wallet located in Japan.
 
 Exchange integrations:
 
 * gate.io
   * https://twitter.com/gate_io/status/1049238635189391361
   * https://www.gate.io/article/16642
+* Binance
+  * https://twitter.com/decredproject/status/1054582529263591430
+  * https://twitter.com/binance/status/1054572693725446144
+  * https://twitter.com/cz_binance/status/1054573983805423616
+  * r/binance https://www.reddit.com/r/binance/comments/9qle8z/dcr_on_binance/
+  * r/cryptocurrency https://www.reddit.com/r/CryptoCurrency/comments/9qlac1/binance_just_announced_they_are_listing_decred_26/
 
 Decred [is live](https://twitter.com/roomofsatoshi/status/1052879109099991041) on [Living Room of Satoshi](https://www.livingroomofsatoshi.com/). It allows to pay any bill or to any Australian bank account with Decred. Established in 2014, the service helped to pay over 140,000 bills.
 
@@ -146,7 +182,7 @@ ShapeShift and Evercoin which used to provide accountless trading for DCR are on
 
 New merchants:
 
-* {}
+* https://www.cryptocurrencyposters.com/coins/decred-merch/
 
 {applications of Decred blockchain}
 
@@ -184,6 +220,10 @@ https://drcr.substack.com/welcome
 
 {ratings news}
 
+"#1 position in our social media hype ranking" https://twitter.com/pexchain_com/status/1054799233352556544
+
+DPRating A with "low risk" (https://www.dprating.com/rating/report/47 [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fwww.dprating.com%2Frating%2Freport%2F47)) "the only A project in our rating" https://twitter.com/DPRating/status/1054580936396877825
+
 Featured articles:
 
 * {1003} https://medium.com/@permabullnino/1-assurances-in-crypto-14c55a1fd616
@@ -192,6 +232,7 @@ Featured articles:
   * large discussion on r/cryptocurrency https://www.reddit.com/r/CryptoCurrency/comments/9onhxf/decred_is_turning_its_entire_21_million_crypto/
 * {1016} https://medium.com/@richardred/on-the-launch-of-decreds-politeia-b305d06d8bda
 * {1016} https://medium.com/@dlefebvr/politeia-approaching-escape-velocity-30f95f8b2055 {?}
+* {1024} https://medium.com/@permabullnino/state-of-decred-pos-edition-2f94aa062897 {Network? Markets?}
 
 Articles:
 
@@ -206,19 +247,34 @@ Articles:
 * {1017} https://toshitimes.com/decreds-governance-system-goes-live-21-million-crypto-treasury-is-in-the-hands-of-stakeholders/
 * {1018} https://www.blockchainreporter.net/2018/10/18/decred-dcr-blockchain-project-launches-its-self-governance-system-called-politeia/
 * {1018} https://btcmanager.com/decred-launches-decentralized-governance-protocol-politeia/
+* {1021} https://www.investinblockchain.com/decred-politeia/
+* {1022} https://thirtyk.com/2018/10/22/decentalized-weird-blockchain/
+* {1022} https://captainaltcoin.com/decred-dcr-summary-training-wheels-have-been-taken-off-as-politeia-goes-live/
+* {1023} https://www.blockchainreporter.net/2018/10/23/decred-dcr-sees-a-25-percent-spike-in-value-after-being-listed-on-binance/
+* {1023} https://cryptovest.com/news/decred-dcr-price-defies-gravity-on-binance-listing/
+* {1023} https://nouvive.com/2018/10/23/dcr-on-binance-price-forecast/
+* {1023} https://www.ccn.com/decred-jumps-34-after-politeia-announcement-binance-listing/
+* {1023} https://www.investinblockchain.com/decred-price-rockets-binance-listing/ (includes price analysis)
+* {1024} https://www.blockdelta.io/decred-the-enduring-power-of-binance/
+* {1024} https://breakermag.com/decred-is-letting-users-choose-how-to-spend-its-28-million-dev-budget/
 
 Translations:
 
-* {}
+* The launch of Politeia in Russian by @DZ https://medium.com/decred-russia/запуск-politeia-4d31a2c9590b in Polish by @kozel https://medium.com/@artikozel/politeia-w-fazie-produkcji-aut-jake-yocom-piatt-bf58c446b274
+* Decred Journal - September 2018 in Russian by @DZ https://medium.com/decred-russia/decred-journal-%D1%81%D0%B5%D0%BD%D1%82%D1%8F%D0%B1%D1%80%D1%8C-2018-4967ddfd5033
 
 Videos:
 
 * https://www.youtube.com/watch?v=-RVf3Hkv-9Q {good? new?}
+* Decred Brasil Oficial - Decred Semanal 15-21 (Politeia, Eleicoes, Pagamento, Texas) https://youtu.be/ga_uCBUXY-I
+* https://www.youtube.com/watch?v=7oONdnwFFJI (u/davecgh [commented](https://www.reddit.com/r/decred/comments/9qyemq/decred_review_the_biggest_bitcoin_competitor/e8cnw9g/) to clarify on hard fork resistance)
 
 Audio:
 
 * https://twitter.com/_jillruth/status/1052947484241092608
 @_jillruth and @Melt_Dem discuss Tether panic, Fidelity hype and Decred's DAO
+  * https://simplecast.com/s/e236b0fe
+* https://simplecast.com/s/3990774a https://www.reddit.com/r/decred/comments/9qmfhq/marco_peereboom_of_decred_on_thriller_podcast/e8a93i6/
 
 ## Community Discussions
 
@@ -235,6 +291,8 @@ Community stats:
 Comm systems news:
 
 * Thanks to @degeri for detecting https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153984485932336wcyEb:decred.org malware posted in #general. Stay vigilant!
+* New [#proposals](https://riot.im/app/#/room/!MIGqWXfLFBwhipPKYL:decred.org) room
+* Riot update reduced memory usage by 70% https://medium.com/@RiotChat/riot-im-web-0-17-and-ios-0-7-6-smaller-footprint-faster-launch-5ddd18a65abb
 
 {highlights, one paragraph per topic}
 
@@ -254,6 +312,8 @@ Reddit:
 
 Chats: {interesting convos}
 
+> I've visited a lot of other communities and IMO the Decred community seems quite strong. I haven't found many where you have such access to the developers and where you can watch the changes being made on a daily basis. (@sumiflow in [#trading](https://matrix.to/#/!zxBsqZRxjbQoLqJRwe:decred.org/$153979318831397xufQV:decred.org))
+
 ## Markets
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
@@ -263,19 +323,28 @@ On Oct 15 a huge dump of USDT caused it to drop below $0.8 on some exchanges, an
 * https://cointelegraph.com/news/tether-tanks-as-traders-lose-trust-other-cryptos-see-price-boost
 * https://www.bloomberg.com/news/articles/2018-10-14/why-crypto-traders-are-so-worried-about-tether-quicktake-q-a
 
+Pump following Binance listing announcement.
+
 ## Relevant External
 
 {PoW and ASIC resistance news}
 
 A new [paper](https://arxiv.org/abs/1810.02466), signed by researchers from from Princeton University and Florida International University, suggests that Bitcoin can be heavily influenced by China. The paper was not peer reviewed yet. The paper titled "An Analysis of Chinese Influence on Bitcoin" was twisted by the [media](https://thenextweb.com/hardfork/2018/10/08/china-means-intent-destroy-bitcoin/) as "China has the power to destroy Bitcoin". https://mashable.com/article/bitcoin-china-destroy/
 
-SC fork https://twitter.com/SiaTechHQ/status/1046817114579984384
+SC fork
+
+* https://twitter.com/SiaTechHQ/status/1046817114579984384
+* https://blog.sia.tech/sia-fork-faqs-c6b3e0e73ce0
 
 Someone was going to attack a small PoW coin for education (and perhaps entertainment) https://www.reddit.com/r/CryptoCurrency/comments/9m1uuj/if_i_livestreamed_the_setup_and_execution_of/
 
 {governance-related news not mentioned in Community Discussions}
 
 https://www.coindesk.com/vitalik-called-it-vote-buying-scandal-stokes-fears-of-eos-failure/
+
+Recent [issues](https://hackernoon.com/whats-going-on-with-cardano-3f2996841b21) around Cardano Foundation show us that it is important to keep the structure flat, to carefully vet any entity before giving them money and to track their progress.
+
+A research of Bitcoin implementations by BitMEX group https://blog.bitmex.com/bitcoin-cores-competition/
 
 {related exchanges and websites news}
 
@@ -288,6 +357,8 @@ https://poloniex.com/press-releases/2018.10.03-Poloniex-To-Remove-Margin-And-Len
 Bittrex keeps adding USD markets https://twitter.com/BittrexExchange/status/1047133103167295489
 
 OKEx 4 stablecoins
+
+Coinbase added USDC https://blog.coinbase.com/coinbase-and-circle-announce-the-launch-of-usdc-a-digital-dollar-2cd6548d237
 
 {other related: regulations, security, fun}
 
