--- a/journal/201810.md
+++ b/journal/201810.md
@@ -99,16 +99,43 @@ Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {
 
 ## Governance
 
-We had a total of {4} proposals in Politeia this month. All of them are in the pre-voting stage.
+We had a total of {6} proposals in Politeia this month.
 
 1. @Richard-Red put forth a proposal on October 16, 2018 titled ["Decred Open Source Research"](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) it aims to seek funding for opensource research onto cryptocurrency and will involve multiple contributors. He is currently requesting for 10000 USD as an initial budget for a few months.
 
-2. {WRITE ABOUT "Change language: PoS Mining to PoS Voting, Stakepool to Voting Service Provider"}
-3. {WRITE ABOUT "Decred Contractor Clearance Process"}
-4. {WRITE ABOUT "Wachsman Communications Proposal for Decred"}
-{recaps Politeia activity for the month: new proposals, version changes, vote state changes, comment overview (sentiment), vote results, likely upcoming proposals}
+{Current Status}: Waiting for administrator approval to start voting
 
-https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/
+2. @Richard-Red opened a proposal titled ["Change language: PoS Mining to PoS Voting, Stakepool to Voting Service Provider"](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75). The proposal asks that changes be made to some common terminologies in the decred staking process.
+
+{Current Status}: Waiting for administrator approval to start voting
+
+3. @jy-p submitted a proposal titled ["Decred Contractor Clearance Process"](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4). The proposal goes into detail on a method to handle adding new contractors, removal of contractors, contractor disputes and resolution. He suggested that it be based on existing contractors "voting". The voting power is determined by the number of hours they have billed in a given period of time. The estimated project cost is USD 25,000.
+
+{Current Status}: Author has not yet authorized the start of voting
+
+4. A user "hashfunction8" had a proposal named ["Testing of the funding-request mechanism by a non expert"](https://proposals.decred.org/proposals/3575a65bbc3616c939acf6edf801e1168485dc864efef910034268f695351b5d) in which the user asked for 0.1 DCR to document and write a report on how to use the politeia system.
+
+{Current Status}: Author has not yet authorized the start of voting
+
+Finally we had two professional PR companies submit proposals for managing the PR of Decred, both proposals had multiple revisions based on community feedback. 
+
+5.["Ditto Communications Proposal for Decred"](https://proposals.decred.org/proposals/27f87171d98b7923a1bd2bee6affed929fa2d2a6e178b5c80a9971a92a5c7f50) by ["Ditto Communications"](https://www.dittopr.co/)  
+{Details}: Duration-Six Months; 30 days out-clause; $25,000 in DCR.
+
+
+{Current Status}: Waiting for administrator approval to start voting
+
+6. ["Wachsman Communications Proposal for Decred"](https://proposals.decred.org/proposals/bc8776180b5ea8f5d19e7d08e9fcc35f0d1e3d16974963e3e5ded65139e7b092) ["Wachsman Communications"](https://wachsman.com/)  
+{Details}: Duration-Six Months; 30 days out-clause; $20,000 in DCR.
+
+
+{Current Status}: Waiting for administrator approval to start voting
+
+For a more detailed report on the submitted proposals please read the "Politeia Digest" by @Richard-Red 
+
+[politeia-digest-issue-001](https://richardred0x.github.io/politeia-digest/issue-001.html)
+
+{recaps Politeia activity for the month: new proposals, version changes, vote state changes, comment overview (sentiment), vote results, likely upcoming proposals}
 
 {follow up on larger proposals, completed milestones, payments}
 
