--- a/journal/201810.md
+++ b/journal/201810.md
@@ -90,10 +90,13 @@ Welcome to new people contributing for the first time:
 * gh ggoranov {CONFIRM https://github.com/decred/dcrd/commits?author=ggoranov}
 * gh gallexis https://github.com/decred/dcrwallet/commits?author=gallexis
 * @ZeroASIC https://github.com/decred/dcrweb/commits?author=ZeroASIC
+* gh buck54321 https://github.com/decred/dcrdata/commits?author=buck54321
+* gh szpasztor https://github.com/decred/decrediton/commits?author=szpasztor
+* gh faelv https://github.com/decred/decrediton/commits?author=faelv
 
 (_ed: please note the list is incomplete as it is pretty hard to track this across multiple repositories, let us know if you can help_)
 
-There was a small interruption in the work of GitHub that had a minor impact on the development.
+There was a small [interruption](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154021525435657VDmQn:decred.org) on GitHub that had a minor impact on the development, but the developers are keeping an eye on GitHub.
 
 Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
@@ -133,7 +136,8 @@ Current Status: Proposal voting active
 
 For a more detailed report on the submitted proposals please read the "Politeia Digest" by @Richard-Red 
 
-[politeia-digest-issue-001](https://richardred0x.github.io/politeia-digest/issue-001.html)
+* https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/
+* https://www.reddit.com/r/decred/comments/9sruhn/politeia_digest_2_oct_2330th_2018/
 
 {recaps Politeia activity for the month: new proposals, version changes, vote state changes, comment overview (sentiment), vote results, likely upcoming proposals}
 
@@ -198,6 +202,8 @@ Decred [is live](https://twitter.com/roomofsatoshi/status/1052879109099991041) o
 > Hi guys, just want to let you know that Decred is now live on www.livingroomofsatoshi.com . LRoS is a platform that Australians can use to pay any bill with cryptocurrency. We were getting quite a bit of interest from Decred users so we're happy to now have you onboard for Australians to use. (@RoomOfSatoshi in [#general](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153985979832389MbrMp:decred.org))
 
 ShapeShift and Evercoin which used to provide accountless trading for DCR are on the [way](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) of adding mandatory accounts.
+
+https://twitter.com/easyrabbit_net/status/1057289620206088192
  
 {new OTC desks}
 
@@ -249,7 +255,7 @@ https://drcr.substack.com/welcome
 
 "#1 position in our social media hype ranking" https://twitter.com/pexchain_com/status/1054799233352556544
 
-DPRating A with "low risk" (https://www.dprating.com/rating/report/47 [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fwww.dprating.com%2Frating%2Freport%2F47)) "the only A project in our rating" https://twitter.com/DPRating/status/1054580936396877825
+DPRating gave Decred an A with "low risk" (https://www.dprating.com/en/rating/report/47 , original in Chinese https://www.dprating.com/rating/report/47) "the only A project in our rating" https://twitter.com/DPRating/status/1054580936396877825
 
 Featured articles:
 
@@ -280,10 +286,13 @@ Articles:
 * {1023} https://www.blockchainreporter.net/2018/10/23/decred-dcr-sees-a-25-percent-spike-in-value-after-being-listed-on-binance/
 * {1023} https://cryptovest.com/news/decred-dcr-price-defies-gravity-on-binance-listing/
 * {1023} https://nouvive.com/2018/10/23/dcr-on-binance-price-forecast/
-* {1023} https://www.ccn.com/decred-jumps-34-after-politeia-announcement-binance-listing/
+* {1023} https://www.ccn.com/decred-jumps-34-after-politeia-announcement-binance-listing/ (_modest spendings since Decred's ICO closure, nice_)
 * {1023} https://www.investinblockchain.com/decred-price-rockets-binance-listing/ (includes price analysis)
 * {1024} https://www.blockdelta.io/decred-the-enduring-power-of-binance/
 * {1024} https://breakermag.com/decred-is-letting-users-choose-how-to-spend-its-28-million-dev-budget/
+* {1025} A cryptocurrency called Decred is gaining cred. https://mailchi.mp/technologyreview/chain-letter-767021
+* {1026} https://livecoins.com.br/decred-permite-que-usuarios-controlem-mais-de-r100-milhoes/
+* {1029} https://cryptodisrupt.com/politeia-decred-community-to-vote-on-usd-28-million-development-fund/
 
 Translations:
 
@@ -295,6 +304,10 @@ Videos:
 * https://www.youtube.com/watch?v=-RVf3Hkv-9Q {good? new?}
 * Decred Brasil Oficial - Decred Semanal 15-21 (Politeia, Eleicoes, Pagamento, Texas) https://youtu.be/ga_uCBUXY-I
 * https://www.youtube.com/watch?v=7oONdnwFFJI (u/davecgh [commented](https://www.reddit.com/r/decred/comments/9qyemq/decred_review_the_biggest_bitcoin_competitor/e8cnw9g/) to clarify on hard fork resistance)
+* Jonathan Chappelow on Decred's Governance and Block Explorer, dcrdata ([youtube](https://www.youtube.com/watch?v=axTl2J94IrI)) {in events?}
+* {1024} Decred Review - The Biggest Bitcoin Competitor? https://www.youtube.com/watch?v=7oONdnwFFJI
+* {1024} decred explained - what is decred https://www.youtube.com/watch?v=JKKiGxJfcQY
+* {1029} Decred Semanal 22-28 (Binance, Texas, Edge Wallet, Trezor T, Propostas) https://www.youtube.com/watch?v=dvHUzg-yj_c
 
 Audio:
 
