--- a/journal/201810.md
+++ b/journal/201810.md
@@ -35,7 +35,7 @@ Up next is adding notifications and other missing features. Longer term plan is 
 
 [iOS](https://github.com/raedahgroup/dcrios): design upgrades and bugfixes.
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrdata](https://github.com/decred/dcrdata):
 
 * Lots of work to speed up initial sync ([751](https://github.com/decred/dcrdata/pull/751), [754](https://github.com/decred/dcrdata/pull/754), [752](https://github.com/decred/dcrdata/issues/752)).
 * Insight API [documentation](https://github.com/decred/dcrdata/pull/719).
