--- a/journal/201810.md
+++ b/journal/201810.md
@@ -17,6 +17,8 @@ New software version 1.3.1 was released to allow everyone to participate in Poli
 * Go Report Card was added to README and as of writing it is [showing](https://goreportcard.com/report/github.com/decred/dcrd) A+ rating for the project.
 * Various RPC, testing and infrastructure improvements.
 
+A lot of mining-related improvements are [in the pipeline](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154003890434385mrGTu:decred.org).
+
 [dcrwallet](https://github.com/decred/dcrwallet): bug fixes.
 
 [Decrediton](https://github.com/decred/decrediton): [Version 1.3.1](https://github.com/decred/decred-binaries/releases/tag/v1.3.1) reveals SPV and Politeia functionality to all users. It also adds first batch of translations that include French, Spanish, German, Japanese and Chinese (simplified). If you are a long standing community member and notice any incorrect translations you can open an issue on github or contact the team on the slack/matrix chat platforms. To ensure high quality translations, some trust with the project is currently required to submit translation issues. At the same time, the procedures to allow input from more users is being formalized.
@@ -42,23 +44,29 @@ Up next is adding notifications and other missing features. Longer term plan is 
 * Work ongoing for [new home page](https://github.com/decred/dcrdata/pull/718) design.
 * [Disapproved Blocks](https://github.com/decred/dcrdata/pull/733) page is in development.
 
+Trezor: Decred support was merged into Model T firmware repository. Decrediton integration can be merged after the next firmware release. This is all for normal transactions. Buying tickets requires more work and changes to dcrwallet.
+
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): v0.6.2 released, the downloads and release notes are [on GitHub](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.6.2). On the master branch OpenBSD support was added among a few internal improvements.
 
 [docs](https://github.com/decred/dcrdocs): [upgrade](https://github.com/decred/dcrdocs/pull/601) of mkdocs and material theme allowed to simplify things, [optimized](https://github.com/decred/dcrdocs/pull/647) images, added [Decrediton troubleshooting](https://docs.decred.org/getting-started/user-guides/decrediton-troubleshooting/) page.
 
-[decred.org](https://github.com/decred/dcrweb): [removed](https://github.com/decred/dcrweb/issues/370) outdated compare page that caused some controversy.
+[decred.org](https://github.com/decred/dcrweb): [removed](https://github.com/decred/dcrweb/issues/370) outdated compare page that caused some controversy, code cleanup, updated press and exchanges. 5 contractors added and 1 removed.
 
 [Design](https://github.com/decred/dcrdesign/releases): EETER updated Decred logo for better performance on digital screens. Check this [blog post](https://medium.com/decred/dcr-logo-performance-update-f12f94a7a33e) with details and comparison to old logo.
 
 Did you know there are several [Decred packages](https://aur.archlinux.org/packages/?O=0&K=decred) in Arch User Repository?
 
-Warm welcome to new people contributing for the first time: [SergeyMikhlevskiy](https://github.com/decred/dcrandroid/commits?author=SergeyMikhlevskiy), [ademuanthony](https://github.com/decred/dcrdata/commits?author=ademuanthony), [ggoranov](https://github.com/decred/dcrd/commits?author=ggoranov), [gallexis](https://github.com/decred/dcrwallet/commits?author=gallexis), [ZeroASIC](https://github.com/decred/dcrweb/commits?author=ZeroASIC), [buck54321](https://github.com/decred/dcrdata/commits?author=buck54321), [szpasztor](https://github.com/decred/decrediton/commits?author=szpasztor), [faelv](https://github.com/decred/decrediton/commits?author=faelv).
-
-(_ed: please note the list is incomplete as it is pretty hard to track this across multiple repositories, let us know if you can help to automate this_)
-
 There was a small [interruption](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154021525435657VDmQn:decred.org) on GitHub that had a minor impact on work, but the developers are keeping an eye on GitHub.
 
 Dev activity stats for October: 310 active PRs, 297 master commits, 65K added and 22K deleted lines spread across 8 repositories. Contributions came from 4-9 developers per repository. ([chart]({}))
+
+## People
+
+Welcome to the new contractor company: [Block 42](http://42block.io/). They have been contributing to development and design for some time, and now finally listed at decred.org.
+
+Another warm welcome to new people contributing for the first time: [SergeyMikhlevskiy](https://github.com/decred/dcrandroid/commits?author=SergeyMikhlevskiy), [ademuanthony](https://github.com/decred/dcrdata/commits?author=ademuanthony), [ggoranov](https://github.com/decred/dcrd/commits?author=ggoranov), [gallexis](https://github.com/decred/dcrwallet/commits?author=gallexis), [ZeroASIC](https://github.com/decred/dcrweb/commits?author=ZeroASIC), [buck54321](https://github.com/decred/dcrdata/commits?author=buck54321), [szpasztor](https://github.com/decred/decrediton/commits?author=szpasztor), [faelv](https://github.com/decred/decrediton/commits?author=faelv).
+
+(_ed: please note the list above is incomplete as it is hard to track across multiple repositories, let us know if you can help to automate this_)
 
 ## Governance
 
@@ -293,6 +301,7 @@ Comm systems news:
 * Thanks to @degeri for detecting https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153984485932336wcyEb:decred.org malware posted in #general. Stay vigilant!
 * New [#proposals](https://riot.im/app/#/room/!MIGqWXfLFBwhipPKYL:decred.org) room was created to discuss Politeia proposals. Part of history is already gone in the Slack Void, but everything is stored in Matrix. For the diggers [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154007473834677bxnMv:decred.org) is the room start.
 * Riot update reduced memory usage by 70% https://medium.com/@RiotChat/riot-im-web-0-17-and-ios-0-7-6-smaller-footprint-faster-launch-5ddd18a65abb
+* Registrations on the forum [are closed](https://github.com/decred/dcrweb/issues/379), the forum will stay up archival purposes.
 
 {highlights, one paragraph per topic}
 
