--- a/journal/201810.md
+++ b/journal/201810.md
@@ -28,7 +28,7 @@ A lot of mining-related improvements are [in the pipeline](https://matrix.to/#/!
 * Multiple bug fixes and UI improvements.
 * [Ability](https://github.com/decred/politeia/issues/538) for admins to specify quorum, pass threshold and vote duration.
 * [Ability](https://github.com/decred/politeia/issues/537) to lock accounts that are abusing the system or for security reasons.
-* [Ability](https://github.com/decred/politeiagui/pull/655) to revoke proposal vote authorization .
+* [Ability](https://github.com/decred/politeiagui/pull/655) to revoke proposal vote authorization.
 * Many community members joined testing and submitted dozens of issue reports after launch.
 
 Up next is adding notifications and other missing features. Longer term plan is to scale Politeia and develop smart contracts for the Treasury.
@@ -70,7 +70,7 @@ Another warm welcome to new people contributing for the first time: [SergeyMikhl
 
 ## Governance
 
-We had a total of {6} proposals in Politeia this month.
+We had a total of {6} proposals in Politeia in October.
 
 1. @Richard-Red put forth a proposal on October 16, 2018 titled ["Decred Open Source Research"](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) it aims to seek funding for opensource research onto cryptocurrency and will involve multiple contributors. He is currently requesting for 10000 USD as an initial budget for a few months.
 
@@ -113,15 +113,13 @@ For a more detailed report on the submitted proposals please read the "Politeia 
 
 ## Network
 
-Hashrate: {start, end, low, high, variation; pool distribution}
+Hashrate: nearly doubled in October, starting the month around 80 and ending around 156 PH/s. The low was 73 and the high was 193 PH/s. BeePool's share varied between 20-50%, F2Pool 25-35%, Luxor 3-5% and Coinmine 3-4%. Unkown hashrate held between 20-30% with several spikes to 60%. Pool distribution numbers are approximate and cannot be accurately determined.
 
-Staking: {30-day average tix price, low, high, locked DCR mil and %}
+Staking: 30-day average ticket price was 99.8 DCR (+1.8). The price varied between 96.5 and 102.6 DCR. Locked amount was 3.94-4.06 million DCR, which corresponded to 46.0-46.6% of the available supply.
 
-Nodes: {node counts, version distribution}
+Third most tickets purchased in a 24 hour period in 2018 was [noticed](https://twitter.com/ImacallyouJawdy/status/1047894895434842112) on Oct 3.
 
-{any interesting events}
-
-3rd biggest tix purchase in 2018 https://twitter.com/ImacallyouJawdy/status/1047894895434842112
+Nodes: as of Oct 31 there are 202 public listening nodes and 323 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 6% are v1.4.0(pre) dev builds (+1%), 45% on v1.3.0 (+15%), 28% on v1.2.0 (-14%), 14% on v1.1.2 (-1%), 5% on v1.1.0 (-1%).
 
 ## ASICs
 
