Feedback from jholdstock

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -48,7 +48,9 @@ Trezor: Decred support was merged into Model T firmware repository. Decrediton i
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): v0.6.2 released, the downloads and release notes are [on GitHub](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.6.2). On the master branch OpenBSD support was added among a few internal improvements.
 
-[docs](https://github.com/decred/dcrdocs): [upgrade](https://github.com/decred/dcrdocs/pull/601) of mkdocs and material theme allowed to simplify things, [optimized](https://github.com/decred/dcrdocs/pull/647) images, added [Decrediton troubleshooting](https://docs.decred.org/getting-started/user-guides/decrediton-troubleshooting/) page.
+[docs](https://github.com/decred/dcrdocs): updated relevant documentation for the 1.3.1 release, added new [Decrediton troubleshooting](https://docs.decred.org/getting-started/user-guides/decrediton-troubleshooting/) page, [upgrade](https://github.com/decred/dcrdocs/pull/601) of mkdocs and material theme allowed to simplify things.
+
+Politeia documentation is nearing completion, SPV documentation is planned next.
 
 [decred.org](https://github.com/decred/dcrweb): [removed](https://github.com/decred/dcrweb/issues/370) outdated compare page that caused some controversy, code cleanup, updated press and exchanges. 5 contractors added and 1 removed.
 
