Oct18: feedback from davecgh

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -12,8 +12,10 @@ New software version 1.3.1 was released to allow everyone to participate in Poli
 
 [dcrd](https://github.com/decred/dcrd):
 
-* Another big change towards multipeer downloads entered testing. It [optimizes](https://github.com/decred/dcrd/pull/1500) chain reorganization logic for the typical case and makes the tests use less memory.
+* Another big change towards multipeer downloads entered testing. It [optimizes](https://github.com/decred/dcrd/pull/1500) chain reorganization logic for the typical case and makes reorganizations use less memory.
 * Regression network (regnet) was [resurrected](https://github.com/decred/dcrd/pull/1480) and several unit tests were [migrated](https://github.com/decred/dcrd/pull/1481) to it. This allowed to separate concerns and [optimize](https://github.com/decred/dcrd/pull/1482) simnet setup.
+* [This change](https://github.com/decred/dcrd/pull/1476) simplifies setting up dcrd on a separate machine.
+* New [getblockchaininfo](https://github.com/decred/dcrd/pull/1479) RPC provides useful chain-related information that was previously unavailable.
 * Go Report Card was added to README and as of writing it is [showing](https://goreportcard.com/report/github.com/decred/dcrd) A+ rating for the project.
 * Various RPC, testing and infrastructure improvements.
 
