--- a/journal/201810.md
+++ b/journal/201810.md
@@ -66,11 +66,11 @@ Dev activity stats for October: 310 active PRs, 297 master commits, 65K added an
 
 ## People
 
-Welcome to the new contractor company: [Block 42](http://42block.io/). They have been contributing to development and design for some time, and now finally appeared [at decred.org](https://decred.org/contributors/).
+Welcome the new contractor company: [Block 42](http://42block.io/). They have been contributing to development and design for some time, and now finally appeared [at decred.org](https://decred.org/contributors/).
 
 Another warm welcome to new people contributing for the first time: [SergeyMikhlevskiy](https://github.com/decred/dcrandroid/commits?author=SergeyMikhlevskiy), [ademuanthony](https://github.com/decred/dcrdata/commits?author=ademuanthony), [ggoranov](https://github.com/decred/dcrd/commits?author=ggoranov), [gallexis](https://github.com/decred/dcrwallet/commits?author=gallexis), [ZeroASIC](https://github.com/decred/dcrweb/commits?author=ZeroASIC), [buck54321](https://github.com/decred/dcrdata/commits?author=buck54321), [szpasztor](https://github.com/decred/decrediton/commits?author=szpasztor), [faelv](https://github.com/decred/decrediton/commits?author=faelv).
 
-(_ed: please note the list above is incomplete as it is hard to track across multiple repositories, let us know if you can help to automate this_)
+(_ed: the list above may be incomplete, looking for help to automate the collection of info from multiple repositories_)
 
 ## Governance
 
@@ -127,59 +127,38 @@ Nodes: as of Oct 31 there are 202 public listening nodes and 323 normal nodes pe
 
 ## ASICs
 
-{Obelisk updates}
+Obelisk posted two updates on their [mailing list](https://us16.campaign-archive.com/home/?u=393b2698d17bdfe48ac0422ac&id=87ef82fd96). Batch 1 has shipped, Batch 2-5 production is expected to begin shortly and will take about 6 weeks to build and ship, Obelisk pledged to mine no more than 2% of network hashrate (down from 20%), an article detailing [compensation policy](http://support.obelisk.tech/article/utx5ropgxt-compensation-policy) was posted, firmware update v1.2.0 was [released](https://obelisk.tech/downloads.html). DCR1 owners will be able to purchase SC1 upgrade boards and convert their units into Sia miners.
 
-http://support.obelisk.tech/article/utx5ropgxt-compensation-policy
+Meet StrongU, a new mining manufacturer who released two units:
 
-https://www.asicminervalue.com/miners/strongu/stu-u1
-https://coinminingcentral.com/products/strongu-stu-u1-11th-s
+* [STU-U1](https://www.asicminervalue.com/miners/strongu/stu-u1) has 11 TH/s at 1600 W, price around $1,400.
+* [STU-U1+](https://www.asicminervalue.com/miners/strongu/stu-u1-1) has 12.8 TH/s at 1850 W, price around $1,600.
 
-U1+ 12.8 TH/s 1850 W 9180 RMB
-
-i2Rav: If anyone is interested in purchasing whatsminer DCR1 machines please reach out to me directly for details. {comment pls}
+[@i2Rav](https://decred.slack.com/team/U9G4L5QTH) offers assistance in purchasing Whatsminer DCR1 machines, reach out to him on Slack for details.
 
 ## Integrations
 
-{new mining and staking pools or news from existing ones}
-
 Welcome _three_ new stake pools this month:
 
-* [stakey.com](https://stakey.com) 18th pool https://github.com/decred/dcrwebapi/pull/38, 1% fee (do not confuse with [stakey.net](https://stakey.net/)).
-* [dcrpos.megapool.info](dcrpos.megapool.info) 19th, 1% fee
-* [dcrstake.coinmine.pl](https://dcrstake.coinmine.pl/) 20th stake pool, 0.5% fee.
+* [stakey.com](https://stakey.com) is 18th pool with 1% fee (do not confuse with [stakey.net](https://stakey.net/)).
+* [dcrpos.megapool.info](dcrpos.megapool.info) is 19th with 1% fee
+* [dcrstake.coinmine.pl](https://dcrstake.coinmine.pl/) is 20th with 0.5% fee.
 
-https://decredvoting.com now supports automatic email notification for full and split tickets. Users have the option of receiving email notification when their ticket votes.
-https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/
+[decredvoting.com](https://decredvoting.com) now supports automatic [email notification](https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/) for full and split tickets. Also it [added](https://www.reddit.com/r/decred/comments/9qv235/voting_service_provider_decredvotingcom_is_now/) a 4th server in central Europe, in addition to 3 servers in the US.
 
-https://www.reddit.com/r/decred/comments/9qv235/voting_service_provider_decredvotingcom_is_now/
-
-dcr.farm recently voted on its 10,000th ticket. To celebrate, they added a 6th voting wallet located in Japan.
+[dcr.farm](https://dcr.farm/) recently [voted](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153991704133210OjYNP:decred.org) on its 10,000th ticket. To celebrate, they added a 6th voting wallet located in Japan.
 
 Exchange integrations:
 
-* gate.io
-  * https://twitter.com/gate_io/status/1049238635189391361
-  * https://www.gate.io/article/16642
-* Binance
-  * https://twitter.com/decredproject/status/1054582529263591430
-  * https://twitter.com/binance/status/1054572693725446144
-  * https://twitter.com/cz_binance/status/1054573983805423616
-  * r/binance https://www.reddit.com/r/binance/comments/9qle8z/dcr_on_binance/
-  * r/cryptocurrency https://www.reddit.com/r/CryptoCurrency/comments/9qlac1/binance_just_announced_they_are_listing_decred_26/
+* [gate.io](https://www.gate.io/) [announced](https://twitter.com/gate_io/status/1049238635189391361) the addition of DCR trading against BTC and USDT.
+* [Binance](https://www.binance.com/en) [added](https://twitter.com/binance/status/1054572693725446144) DCR trading against BTC and BNB, [noting](https://twitter.com/cz_binance/status/1054573983805423616) it as "strong community project". Discussed on [r/binance](https://www.reddit.com/r/binance/comments/9qle8z/dcr_on_binance/) and [r/cryptocurrency](https://www.reddit.com/r/CryptoCurrency/comments/9qlac1/binance_just_announced_they_are_listing_decred_26/).
+* [Easyrabbit](https://easyrabbit.net/) [added](https://twitter.com/easyrabbit_net/status/1057289620206088192) Decred support and allows to exchange DCR without an account.
+
+Evercoin turned from an instant exchange into an app and no longer supports Decred, thus [removed](https://github.com/decred/dcrweb/pull/389) from the [list of exchanges](https://decred.org/exchanges/).
 
 Decred [is live](https://twitter.com/roomofsatoshi/status/1052879109099991041) on [Living Room of Satoshi](https://www.livingroomofsatoshi.com/). It allows to pay any bill or to any Australian bank account with Decred. Established in 2014, the service helped to pay over 140,000 bills.
 
-> Hi guys, just want to let you know that Decred is now live on www.livingroomofsatoshi.com . LRoS is a platform that Australians can use to pay any bill with cryptocurrency. We were getting quite a bit of interest from Decred users so we're happy to now have you onboard for Australians to use. (@RoomOfSatoshi in [#general](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153985979832389MbrMp:decred.org))
-
-ShapeShift and Evercoin which used to provide accountless trading for DCR are on the [way](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) of adding mandatory accounts.
-
-https://twitter.com/easyrabbit_net/status/1057289620206088192
- 
-{new OTC desks}
-
-{payment processors}
-
-{wallets}
+> Hi guys, just want to let you know that Decred is now live on [livingroomofsatoshi.com](https://www.livingroomofsatoshi.com/) . LRoS is a platform that Australians can use to pay any bill with cryptocurrency. We were getting quite a bit of interest from Decred users so we're happy to now have you onboard for Australians to use. (@RoomOfSatoshi in [#general](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153985979832389MbrMp:decred.org))
 
 ## Adoption
 
@@ -362,6 +341,8 @@ A research of Bitcoin implementations by BitMEX group https://blog.bitmex.com/bi
 Polo new delists and margin close announcement.
 
 {dig interesting Oct https://twitter.com/poloniex}
+
+ShapeShift is on the [way](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) to add mandatory registration and KYC.
 
 https://poloniex.com/press-releases/2018.10.03-Poloniex-To-Remove-Margin-And-Lending-Products-For-US-Based-Customers/
 
