--- a/journal/201810.md
+++ b/journal/201810.md
@@ -138,46 +138,27 @@ Meet StrongU, a new mining manufacturer who released two units:
 
 ## Integrations
 
-{new mining and staking pools or news from existing ones}
-
 Welcome _three_ new stake pools this month:
 
-* [stakey.com](https://stakey.com) 18th pool https://github.com/decred/dcrwebapi/pull/38, 1% fee (do not confuse with [stakey.net](https://stakey.net/)).
-* [dcrpos.megapool.info](dcrpos.megapool.info) 19th, 1% fee
-* [dcrstake.coinmine.pl](https://dcrstake.coinmine.pl/) 20th stake pool, 0.5% fee.
+* [stakey.com](https://stakey.com) is 18th pool with 1% fee (do not confuse with [stakey.net](https://stakey.net/)).
+* [dcrpos.megapool.info](dcrpos.megapool.info) is 19th with 1% fee
+* [dcrstake.coinmine.pl](https://dcrstake.coinmine.pl/) is 20th with 0.5% fee.
 
-https://decredvoting.com now supports automatic email notification for full and split tickets. Users have the option of receiving email notification when their ticket votes.
-https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/
+[decredvoting.com](https://decredvoting.com) now supports automatic [email notification](https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/) for full and split tickets. Also it [added](https://www.reddit.com/r/decred/comments/9qv235/voting_service_provider_decredvotingcom_is_now/) a 4th server in central Europe, in addition to 3 servers in the US.
 
-https://www.reddit.com/r/decred/comments/9qv235/voting_service_provider_decredvotingcom_is_now/
-
-dcr.farm recently voted on its 10,000th ticket. To celebrate, they added a 6th voting wallet located in Japan.
+[dcr.farm](https://dcr.farm/) recently [voted](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153991704133210OjYNP:decred.org) on its 10,000th ticket. To celebrate, they added a 6th voting wallet located in Japan.
 
 Exchange integrations:
 
-* gate.io
-  * https://twitter.com/gate_io/status/1049238635189391361
-  * https://www.gate.io/article/16642
-* Binance
-  * https://twitter.com/decredproject/status/1054582529263591430
-  * https://twitter.com/binance/status/1054572693725446144
-  * https://twitter.com/cz_binance/status/1054573983805423616
-  * r/binance https://www.reddit.com/r/binance/comments/9qle8z/dcr_on_binance/
-  * r/cryptocurrency https://www.reddit.com/r/CryptoCurrency/comments/9qlac1/binance_just_announced_they_are_listing_decred_26/
+* [gate.io](https://www.gate.io/) [announced](https://twitter.com/gate_io/status/1049238635189391361) the addition of DCR trading against BTC and USDT.
+* [Binance](https://www.binance.com/en) [added](https://twitter.com/binance/status/1054572693725446144) DCR trading against BTC and BNB, [noting](https://twitter.com/cz_binance/status/1054573983805423616) it as "strong community project". Discussed on [r/binance](https://www.reddit.com/r/binance/comments/9qle8z/dcr_on_binance/) and [r/cryptocurrency](https://www.reddit.com/r/CryptoCurrency/comments/9qlac1/binance_just_announced_they_are_listing_decred_26/).
+* [Easyrabbit](https://easyrabbit.net/) [added](https://twitter.com/easyrabbit_net/status/1057289620206088192) Decred support and allows to exchange DCR without an account.
+
+Evercoin turned from an instant exchange into an app and no longer supports Decred, thus [removed](https://github.com/decred/dcrweb/pull/389) from the [list of exchanges](https://decred.org/exchanges/).
 
 Decred [is live](https://twitter.com/roomofsatoshi/status/1052879109099991041) on [Living Room of Satoshi](https://www.livingroomofsatoshi.com/). It allows to pay any bill or to any Australian bank account with Decred. Established in 2014, the service helped to pay over 140,000 bills.
 
-> Hi guys, just want to let you know that Decred is now live on www.livingroomofsatoshi.com . LRoS is a platform that Australians can use to pay any bill with cryptocurrency. We were getting quite a bit of interest from Decred users so we're happy to now have you onboard for Australians to use. (@RoomOfSatoshi in [#general](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153985979832389MbrMp:decred.org))
-
-ShapeShift and Evercoin which used to provide accountless trading for DCR are on the [way](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) of adding mandatory accounts.
-
-https://twitter.com/easyrabbit_net/status/1057289620206088192
- 
-{new OTC desks}
-
-{payment processors}
-
-{wallets}
+> Hi guys, just want to let you know that Decred is now live on [livingroomofsatoshi.com](https://www.livingroomofsatoshi.com/) . LRoS is a platform that Australians can use to pay any bill with cryptocurrency. We were getting quite a bit of interest from Decred users so we're happy to now have you onboard for Australians to use. (@RoomOfSatoshi in [#general](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153985979832389MbrMp:decred.org))
 
 ## Adoption
 
@@ -360,6 +341,8 @@ A research of Bitcoin implementations by BitMEX group https://blog.bitmex.com/bi
 Polo new delists and margin close announcement.
 
 {dig interesting Oct https://twitter.com/poloniex}
+
+ShapeShift is on the [way](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) to add mandatory registration and KYC.
 
 https://poloniex.com/press-releases/2018.10.03-Poloniex-To-Remove-Margin-And-Lending-Products-For-US-Based-Customers/
 
