--- a/journal/201810.md
+++ b/journal/201810.md
@@ -66,11 +66,11 @@ Dev activity stats for October: 310 active PRs, 297 master commits, 65K added an
 
 ## People
 
-Welcome to the new contractor company: [Block 42](http://42block.io/). They have been contributing to development and design for some time, and now finally appeared [at decred.org](https://decred.org/contributors/).
+Welcome the new contractor company: [Block 42](http://42block.io/). They have been contributing to development and design for some time, and now finally appeared [at decred.org](https://decred.org/contributors/).
 
 Another warm welcome to new people contributing for the first time: [SergeyMikhlevskiy](https://github.com/decred/dcrandroid/commits?author=SergeyMikhlevskiy), [ademuanthony](https://github.com/decred/dcrdata/commits?author=ademuanthony), [ggoranov](https://github.com/decred/dcrd/commits?author=ggoranov), [gallexis](https://github.com/decred/dcrwallet/commits?author=gallexis), [ZeroASIC](https://github.com/decred/dcrweb/commits?author=ZeroASIC), [buck54321](https://github.com/decred/dcrdata/commits?author=buck54321), [szpasztor](https://github.com/decred/decrediton/commits?author=szpasztor), [faelv](https://github.com/decred/decrediton/commits?author=faelv).
 
-(_ed: please note the list above is incomplete as it is hard to track across multiple repositories, let us know if you can help to automate this_)
+(_ed: the list above may be incomplete, looking for help to automate the collection of info from multiple repositories_)
 
 ## Governance
 
