--- a/journal/201810.md
+++ b/journal/201810.md
@@ -168,7 +168,7 @@ Decred [is live](https://twitter.com/roomofsatoshi/status/1052879109099991041) o
 
 New merchant: [Crypto Posters](https://www.cryptocurrencyposters.com/) offers [Decred merch](https://www.cryptocurrencyposters.com/coins/decred-merch/) (including socks!) and accepts DCR. You can talk to them [on reddit](https://www.reddit.com/r/decred/comments/9qrqlh/decred_merchandise_from_a_site_that_actually/).
 
-Brazilian presidential candidate Fernando Haddad [registered](https://www.obrasilfelizdenovo.com/haddad-blockchain-bitcoin-plano-governo/) his government plan on the Decred blockchain to prevent distortion and possible vote manipulation by fake news. Link to document certification is [here](https://originalmy.com/bitregistro/088e82f064705bd7d33fe708c1084b43898d5739fe7a5ff6bff14a9c0a889853). The story got covered by [criptomoedasfacil](https://www.criptomoedasfacil.com/candidato-a-presidencia-fernando-haddad-registra-seu-plano-de-governo-na-blockchain/), [criptonoticias](https://www.criptonoticias.com/registros-notarias/candidato-presidencial-brasil-registra-plan-gobierno-decred/), [cointelegraph](https://cointelegraph.com/news/brazilian-presidential-candidate-uses-blockchain-to-publish-government-plan) (_Decred omitted_). Discussion on [r/decred](https://www.reddit.com/r/decred/comments/9ofupt/brazilian_presidential_candidate_uses_decred/)
+Brazilian presidential candidate Fernando Haddad [registered](https://www.obrasilfelizdenovo.com/haddad-blockchain-bitcoin-plano-governo/) his government plan on the Decred blockchain to prevent distortion and possible vote manipulation by fake news. Link to document certification is [here](https://originalmy.com/bitregistro/088e82f064705bd7d33fe708c1084b43898d5739fe7a5ff6bff14a9c0a889853). The story got covered by outlets like [criptomoedasfacil](https://www.criptomoedasfacil.com/candidato-a-presidencia-fernando-haddad-registra-seu-plano-de-governo-na-blockchain/), [criptonoticias](https://www.criptonoticias.com/registros-notarias/candidato-presidencial-brasil-registra-plan-gobierno-decred/) and [cointelegraph](https://cointelegraph.com/news/brazilian-presidential-candidate-uses-blockchain-to-publish-government-plan) (_Decred omitted_). Discussion on [r/decred](https://www.reddit.com/r/decred/comments/9ofupt/brazilian_presidential_candidate_uses_decred/).
 
 ## Marketing
 
