Add info from i2Rav

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -129,7 +129,7 @@ Third most tickets purchased in a 24 hour period in 2018 was [noticed](https://t
 
 Nodes: as of Oct 31 there are 202 public listening nodes and 323 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 6% are v1.4.0(pre) dev builds (+1%), 45% on v1.3.0 (+15%), 28% on v1.2.0 (-14%), 14% on v1.1.2 (-1%), 5% on v1.1.0 (-1%).
 
-## ASICs
+## Mining
 
 Obelisk posted two updates on their [mailing list](https://us16.campaign-archive.com/home/?u=393b2698d17bdfe48ac0422ac&id=87ef82fd96). Batch 1 has shipped, Batch 2-5 production is expected to begin shortly and will take about 6 weeks to build and ship, Obelisk pledged to mine no more than 2% of network hashrate (down from 20%), an article detailing [compensation policy](http://support.obelisk.tech/article/utx5ropgxt-compensation-policy) was posted, firmware update v1.2.0 was [released](https://obelisk.tech/downloads.html). DCR1 owners will be able to purchase SC1 upgrade boards and convert their units into Sia miners.
 
@@ -138,15 +138,17 @@ Meet StrongU, a new mining manufacturer who released two units:
 * [STU-U1](https://www.asicminervalue.com/miners/strongu/stu-u1) has 11 TH/s at 1600 W, price around $1,400.
 * [STU-U1+](https://www.asicminervalue.com/miners/strongu/stu-u1-1) has 12.8 TH/s at 1850 W, price around $1,600.
 
-[@i2Rav](https://decred.slack.com/team/U9G4L5QTH) offers assistance in purchasing Whatsminer DCR1 machines, reach out to him on Slack for details.
+[@i2Rav](https://decred.slack.com/team/U9G4L5QTH) on behalf of i2 Trading offers Whatsminer D1 machines for purchase. Additionally they can host the units in their facility in China. DCR is accepted for both services. Reach out to him on Slack for details.
+
+Together with partners in China, Iterative started a Megapool VSP and are soon to launch a PoW pool. They are hoping to provide a full suite of services for Decred stakeholders, from mining equipment and pools, all the way down to liquidation services of DCR into fiat or BTC.
 
 ## Integrations
 
-Welcome _three_ new stake pools this month:
+Welcome _three_ new voting service providers, making a total of 20:
 
-* [stakey.com](https://stakey.com) is 18th pool with 1% fee (do not confuse with [stakey.net](https://stakey.net/)).
-* [dcrpos.megapool.info](dcrpos.megapool.info) is 19th with 1% fee
-* [dcrstake.coinmine.pl](https://dcrstake.coinmine.pl/) is 20th with 0.5% fee.
+* [stakey.com](https://stakey.com) with 1% fee (do not confuse with [stakey.net](https://stakey.net/)).
+* [dcrpos.megapool.info](https://dcrpos.megapool.info/) with 1% fee.
+* [dcrstake.coinmine.pl](https://dcrstake.coinmine.pl/) with 0.5% fee.
 
 [decredvoting.com](https://decredvoting.com) now supports automatic [email notification](https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/) for full and split tickets. Also it [added](https://www.reddit.com/r/decred/comments/9qv235/voting_service_provider_decredvotingcom_is_now/) a 4th server in central Europe, in addition to 3 servers in the US.
 
