--- a/journal/201810.md
+++ b/journal/201810.md
@@ -188,7 +188,14 @@ Targeted advertising report for {month} was posted by @{}. {short recap}. Read m
 
 Attended:
 
-* {}
+* [Austin Startup Week](http://atxstartupweek.com/) in Austin, USA. @moo31337 attended [panel](https://austinstartupweek2018.sched.com/event/GADX/blockchain-track-three-public-blockchains-not-called-bitcoin-or-ethereum) "Three Public Blockchains Not Called Bitcoin. Or Ethereum.". (photos: [1](https://twitter.com/DeCredBAB/status/1046851603570073603) [2](https://twitter.com/DeCredBAB/status/1046844519004737538) [3](https://twitter.com/nemofficial/status/1046914906233036800))
+* @moo31337 teached a class at [University of Texas](https://twitter.com/UTAustin) in Austin, USA. "He wrote a toy blockchain the night before to show how easy it is!". @jz [argues](https://twitter.com/jz_bz/status/1046927198018506752) we might have missed a 9 figure ICO. ([photo](https://twitter.com/DeCredBAB/status/1046916869024862208))
+* [Decred Meetup](https://www.meetup.com/decredpdx/events/254891749/) in Portland, USA.
+* [Bitcoin Meetup CDMX](https://www.meetup.com/Bitcoin-Meetup-Ciudad-de-Mexico/events/255035235/) in Mexico City, Mexico. @elian hosted the event and noted: "of an audience of 30 people only 4 have heard before of Decred, everyone was so surprised to find such a high-quality project in crypto, also they where very interested in how Politeia will be use to deploy the R&D funds of Decred, about the hybrid consensus mechanism and how governance is structured in Decred, was definitely a great audience, looking forward to another meetup". ([photos](https://twitter.com/Decred_MX/status/1048802991325761536))
+* [SF Blockchain Week](https://sfblockchainweek.io/) in San Francisco, USA. @lukebp was speaking on "Consensus Systems: DPos vs PoS".
+* [Get FinTech](https://www.meetup.com/FinTech-and-digital-assets/events/248585942/) in Mexico City, Mexico. @elian presented Decred. ([photos](https://twitter.com/Decred_MX/status/1055668881237467136), [video](https://twitter.com/Decred_MX/status/1055669327771373568))
+* [Decred Meetup](https://www.facebook.com/events/241045786567334/) in Casablanca, Morocco. @butterfly noted after hosting the event: "It went well, people were very interested. Some of them knew Decred as a cryptocurrency but they didn't know the technology behind it. Through this meetup they learned more about Decred project and got interested in the technology." ([photos](https://twitter.com/in_insaf/status/1056252398476423168), [photos](https://www.facebook.com/permalink.php?story_fbid=1884165438286394&id=1836611206375151))
+* Decred Summit at [Texas Bitcoin Conference](https://texasbitcoinconference.com/) in Austin, USA. This was a huge Decred event and Decred was a platinum sponsor. A total of 9 presentations were given, most of them recorded. New shiny silver jacket made an appearance. {best playlist}. (photos: [1](https://twitter.com/ahcastor/status/1056200576206360576), [2](https://twitter.com/odyssey_crypto/status/1056184765181816832), [3](https://twitter.com/cburniske/status/1056228711542988801))
 
 Upcoming:
 
