--- a/journal/201810.md
+++ b/journal/201810.md
@@ -178,7 +178,7 @@ October was an exciting month for Decred, in large part due to the launch of Pol
 
 In addition, multiple blog posts were released to support the Politeia launch, including [Dustorf's](https://medium.com/decred/politeia-approaching-escape-velocity-30f95f8b2055) and [Richard Red's](https://medium.com/decred/on-the-launch-of-decreds-politeia-b305d06d8bda).
 
-Decred was a platinum sponsor at the Texas Bitcoin Conference in Austin on Oct 27-28. A large team converged to deliver some dynamic presentations on governance, Politeia specifically, staking, mining, and many other topics. Videos of the presentations can be viewed [here](https://www.youtube.com/channel/UCI_T5wLHpVh6URSkxG6-x_g). {maybe replace with better playlist}
+Decred was a platinum sponsor at the Texas Bitcoin Conference in Austin on Oct 27-28. A large team converged to deliver some dynamic presentations on governance, Politeia specifically, staking, mining, and many other topics. Videos of the presentations can be viewed [here](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx).
 
 Much of the remainder of the month focused on vetting PR firms and facilitating proposals on Politeia, which will soon be detailed further in a blog by @Dustorf. Now that a PR firm has been approved (early Nov), work will begin to gain consensus within the community on messaging, and plans will begin on significant website updates and an integrated communications for 2019. Much more to share in November.
 
@@ -195,11 +195,12 @@ Attended:
 * [SF Blockchain Week](https://sfblockchainweek.io/) in San Francisco, USA. @lukebp was speaking on "Consensus Systems: DPos vs PoS".
 * [Get FinTech](https://www.meetup.com/FinTech-and-digital-assets/events/248585942/) in Mexico City, Mexico. @elian presented Decred. ([photos](https://twitter.com/Decred_MX/status/1055668881237467136), [video](https://twitter.com/Decred_MX/status/1055669327771373568))
 * [Decred Meetup](https://www.facebook.com/events/241045786567334/) in Casablanca, Morocco. @butterfly noted after hosting the event: "It went well, people were very interested. Some of them knew Decred as a cryptocurrency but they didn't know the technology behind it. Through this meetup they learned more about Decred project and got interested in the technology." ([photos](https://twitter.com/in_insaf/status/1056252398476423168), [photos](https://www.facebook.com/permalink.php?story_fbid=1884165438286394&id=1836611206375151))
-* Decred Summit at [Texas Bitcoin Conference](https://texasbitcoinconference.com/) in Austin, USA. This was a huge Decred event and Decred was a platinum sponsor. A total of 9 presentations were given, most of them recorded. New shiny silver jacket made an appearance. {best playlist}. (photos: [1](https://twitter.com/ahcastor/status/1056200576206360576), [2](https://twitter.com/odyssey_crypto/status/1056184765181816832), [3](https://twitter.com/cburniske/status/1056228711542988801))
+* Decred Summit at [Texas Bitcoin Conference](https://texasbitcoinconference.com/) in Austin, USA. This was a huge Decred event and Decred was a platinum sponsor. A total of 9 presentations were given, most of them recorded. New shiny silver jacket made an appearance. ([Decred videos](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx), [all videos](https://www.youtube.com/playlist?list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_), photos: [1](https://twitter.com/ahcastor/status/1056200576206360576), [2](https://twitter.com/odyssey_crypto/status/1056184765181816832), [3](https://twitter.com/cburniske/status/1056228711542988801))
 
 Upcoming:
 
-* {}
+* [Blockmaster](https://www.blockmaster.com.br/eventos/forum-blockmaster-2018-sao-paulo/) in Sao Palo, Brazil on Nov 13.
+* [BlockchainFiesta](http://blockchainfiesta.io/) in Krakow, Poland on Nov 16.
 
 ## Media
 
